# email_cors_cloudinary

./: README.md  main.py  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/global/: 1262  pg_control
postgres-data/pg_stat_tmp/: global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
